--- a/.gitignore
+++ b/.gitignore
@@ -208,4 +208,7 @@ __marimo__/
 
 # Misc
 .DS_Store
-ccmixter_data.jsonl
+
+# Only the final dataset files are published, not the source and intermediate data
+dataset/ccmixter_data.jsonl
+dataset/selected_uploads.txt
